# Reflow-Oven

./: .clang-format  CMakeLists.old  CMakeLists.txt  main.cpp  main.cpp.test  message.proto  readme.md  servo.pio
.cursor/rules/: 000-Core-Coding-Standards.mdc  001-Core-MVC-Structure.mdc  002-Core-FreeRTOS-Principles.mdc  003-Core-Global-ISR-Management.mdc  004-Core-Naming-Conventions.mdc  005-Core-Folder-Structure-Enforcement.mdc  006-Core-Base-Class-Usage.mdc  007-Core-Temperature-Control.mdc  008-Core-Hardware-Interface.mdc  009-Core-Task-Management.mdc  010-Core-UI-Guidelines.mdc
RP2040-LCD-LVGL/: CMakeLists.txt  main.c
RP2040-LCD-LVGL/examples/: CMakeLists.txt
RP2040-LCD-LVGL/uf2/: RP2040-LCD-0in96-LVGL.uf2  RP2040-LCD-1in14-LVGL.uf2  RP2040-LCD-1in3-LVGL.uf2  RP2040-LCD-1in44-LVGL.uf2  RP2040-LCD-1in8-LVGL.uf2  RP2040-LCD-2in-LVGL.uf2
lib/lcdgfx/: CMakeLists.txt
lib/lcdgfx/src/: lcdgfx.h
lib/lcdgfx/src/canvas/fonts/: fonts.c  fonts.h
lib/lcdgfx/src/lcd_hal/: io.h
lib/lcdgfx/src/lcd_hal/pico/: pico_i2c.cpp  pico_i2c.h  pico_spi.cpp  pico_spi.h  platform.cpp
lib/lcdgfx/src/v2/lcd/: lcd_common.inl
lib/lcdgfx/src/v2/lcd/ssd1331/: lcd_ssd1331.h
lib/lcdgfx/src/v2/nano_engine/: tiler.h
protos/: common.proto  controls.proto  hardware.proto  messages.proto  system.proto  ui.proto
src/: FreeRTOSConfig.h  base_controller.cpp  base_controller.h  base_model.h  constants.h  freertos_port_defs.h  globals.cpp  globals.h  isr_handlers.cpp  isr_handlers.h  lv_conf.h  ui_view.h
src/communications/: nanopb_router.h  uart_manager.h
src/core/: controller.cpp  (+21 more)
(+100 files in other folders)
